--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.15",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "countries-list": "^2.6.1",
     "firebase": "^9.6.1",
     "i18next": "^21.6.3",
     "i18next-browser-languagedetector": "^6.1.2",
