--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.15",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "autosize": "^5.0.1",
     "classnames": "^2.3.1",
     "countries-list": "^2.6.1",
     "firebase": "^9.6.1",
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/autosize": "^4.0.1",
     "@types/luxon": "^2.0.8",
     "prettier": "2.6.2"
   }
