--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.0",
     "sass": "^1.45.2",
     "timezones-list": "^3.0.1",
+    "type-fest": "^3.2.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
