Renamed Customers to Leads

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,7 @@
   "[scss]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "svg.preview.background": "transparent"
+  "svg.preview.background": "transparent",
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "todo-tree.tree.scanMode": "workspace only"
 }
