--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "sass": "^1.45.2",
     "timezones-list": "^3.0.1",
     "type-fest": "^3.2.0",
-    "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "zod": "^3.20.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -71,6 +71,7 @@
   "devDependencies": {
     "@types/autosize": "^4.0.1",
     "@types/luxon": "^2.0.8",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "typescript": "^4.9.3"
   }
 }
