--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "private": true,
   "dependencies": {
     "@hookform/error-message": "^2.0.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^16.11.15",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
+    "@types/node": "^18.14.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "autosize": "^5.0.1",
     "classnames": "^2.3.1",
     "countries-list": "^2.6.1",
@@ -22,8 +18,8 @@
     "lodash": "^4.17.21",
     "luxon": "^2.2.0",
     "package.json": "^2.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.28.1",
     "react-i18next": "^11.15.1",
     "react-router-dom": "^6.2.1",
@@ -33,6 +29,9 @@
     "type-fest": "^3.2.0",
     "web-vitals": "^2.1.2",
     "zod": "^3.20.2"
+  },
+  "resolutions": {
+    "@types/react": "17.0.53"
   },
   "scripts": {
     "start": "react-scripts start",
