--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "react-jsx"
   },
   "include": [
     "src"
-, "src/models/blocks/schemas.ts"  ]
+  ]
 }
