--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "timezones-list": "^3.0.1",
     "type-fest": "^3.2.0",
     "web-vitals": "^2.1.2",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zustand": "^4.3.5"
   },
   "resolutions": {
     "@types/react": "17.0.53"
