--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.28.1",
     "react-i18next": "^11.15.1",
+    "react-is": "^18.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.45.2",
@@ -71,6 +72,7 @@
   "devDependencies": {
     "@types/autosize": "^4.0.1",
     "@types/luxon": "^2.0.8",
+    "@types/react-is": "^17.0.3",
     "prettier": "2.6.2",
     "typescript": "^4.9.3"
   }
