--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@context": ["context"],
+      "@utils": ["utils"],
+      "@lib": ["lib"],
+      "@config": ["config.ts"],
+      "@types": ["types.ts"]
+    },
     "module": "commonjs",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
@@ -9,7 +17,5 @@
     "target": "es2017"
   },
   "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
