--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
-      "@context": ["context"],
-      "@utils": ["utils"],
-      "@lib": ["lib"],
       "@config": ["config.ts"],
-      "@types": ["types.ts"]
+      "@context": ["context"],
+      "@lib": ["lib"],
+      "@services": ["services"],
+      "@types": ["types.ts"],
+      "@utils": ["utils"]
     },
     "module": "commonjs",
     "noImplicitReturns": true,
