--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.28.1",
     "react-i18next": "^11.15.1",
     "react-is": "^18.2.0",
+    "react-json-view": "^1.21.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.45.2",
