Updated github on pull request actions

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "just-ayah-prod",
+    "default": "just-ayah-dev",
     "dev": "just-ayah-dev",
     "prod": "just-ayah-prod"
   },
