--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^21.6.3",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
+    "libphonenumber-js": "^1.10.37",
     "lodash": "^4.17.21",
     "luxon": "^2.2.0",
     "package.json": "^2.0.1",
