--- a/functions/package.json
+++ b/functions/package.json
@@ -10,12 +10,13 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "countries-list": "^2.6.1",
     "firebase-admin": "^10.2.0",
-    "firebase-functions": "^4.2.1",
+    "firebase-functions": "^4.4.1",
     "googleapis": "^115.0.0"
   },
   "devDependencies": {
